$Id$

2007-03-06 Edwin Velds <e.velds@gmail.com>
	* Changed resize handling of dock layout.

2007-02-23 Edwin Velds <e.velds@gmail.com>
	* Additional 64-bit fix in SymbolManager.

2007-02-22 Edwin Velds <e.velds@gmail.com>
	* changed 64-bit compilation error to one that does not warn
	  on 32-bit systems.

2007-02-15 Edwin Velds <e.velds@gmail.com>
	* Added a generic debuggable viewer.
	* Reworked some of the dock widget code to support multiple
	  viewers.

2007-02-11 Edwin Velds <e.velds@gmail.com>
	* Made the HexViewer code usable to view any debuggable.

2007-02-06 Edwin Velds <e.velds@gmail.com>
	* Removed launch button in connect dialog.
	* Added signals to react to settings and symbol changes.
	* Minor change in scrollbar handling of disasm view.

2007-02-05 Edwin Velds <e.velds@gmail.com>
	* Revised the disasm viewer navigation and display code.
	* Fixed some label handling issues.
	* Changed interrupt flag display in register view to DI/EI.

2007-01-14 Edwin Velds <e.velds@gmail.com>
	* Added a menu for hiding/showing controls.
	* Added storing and restoring of window layout in the settings.

2007-01-13 Edwin Velds <e.velds@gmail.com>
	* New docking layout manager.
	    Supports:
	    - Dragging controls off the main window to a separate window.
	    - Docking separate windows back in the main window. Docking
	      occurs to the closest point on the closest edge. For
	      resizable windows, extra resized docking options are
	      available.
	    TODO:
	    - Finish support for multiple docking areas.
	    - Allow resizing of widgets in the docking area.
	    - Refine docking algorithm where needed.
	* Updated commands to use machine_info where appropriate

2006-10-09 Manuel Bilderbeek <manuel@msxnet.org>
	* Use new icon by Eric Boon also on Linux and Windows.
	  TODO: in Windows also make it an appIcon via Windows resources.

2006-10-05 Maarten ter Huurne <maarten@treewalker.org>
	* Use new icon by Eric Boon on OS X.
